Benefits fixed on mobile

--- a/sass/_benefits.scss
+++ b/sass/_benefits.scss
@@ -6,57 +6,59 @@
         background-color: #FFFFFF;
         border: 0.0625rem solid #E8E9ED;
         border-radius: 0.3125rem;
-        max-width: 19.6em;
-        margin: 0 auto;
-        margin-bottom: 3.1em;
+        width: 90%;
+        margin: 0 auto 3em auto;
+        max-height: 23em;
         &__image-container{
-            margin-top: 6em;
             position: relative;
+            text-align: center;
             &__image{
-                display: inline-block;
-                z-index: 10;
                 position: absolute;
-                top: 50%;
-                left: 50%;
+                left: 50%;  
                 &--laptop{
-                    transform: translate(calc(-50% - .5em), -50%);
+                    top: 2.5em;
+                    transform: translateX(-50%);
                 }
                 &--phone{
-                    transform: translate(calc(-50% + 1.6em), calc(-50% - .6em));
+                    top: 1.2em;
+                    transform: translateX(-37%);
                 }
                 &--trumpet{
-                    transform: translate(calc(-50% - 1.2em), calc(-50% + 3.3em));
+                    top: 5vh;
+                    transform: translateX(-60%);
                 }
             }
             &__bg{
-                display: inline-block;
-                position: absolute;
-                top: 50%;
-                left:50%;
                 &--red-mobile{
-                    transform: translate(calc(-50% + 3em), calc(-50% - 1.8em));
+                    padding: 1em 0 0 7em;
                 }
                 &--red-desktop{
                     display: none;
                 }  
                 &--blue{
-                    transform: translate(-50%, calc(-50% - 1.1em));
+                    padding-top: .8em;
                 } 
                 &--green{
-                    transform: translate(-50%, calc(-50% + 1.1em));
+                    width: 100%;
+                    max-height: 20em;
                 }
             }
         }
         &__text-container{
+            padding: 0 1em 2em 1em;
             &__title{
                 font-family: "Raleway", sans-serif;
                 font-weight: 400;
                 font-size: 2rem;
                 line-height: 2.1875rem;
-                margin: .6em;
-                margin-top: 5.6em;
-                &--increase{
-                    margin-top: .8em;
+                padding-right: 1em;
+                padding-top: 1em;
+                &--be-always-first{
+                    margin-top: 2em;
+                    margin-bottom: 1em;
+                }
+                &--your-shop{
+                    margin-bottom: .4em;
                 }
             }
             &__subtitle{
@@ -64,17 +66,8 @@
                 font-weight: 400;
                 font-size: 0.875rem;
                 line-height: 1.3125rem;
-                margin: 1.6em;
-                &--be-always-first{
-                    margin-top: 3em;
-                    padding-bottom: .6em;
-                }
-                &--your-shop{
-                    margin-top: .7em;
-                    padding-bottom: .5em;
-                }
                 &--increase{
-                    margin: .7em 1.2em;
+                    margin-top: 1.5em;
                     font-size: 1rem;
                     line-height: 1.3125rem;
                 }
@@ -88,8 +81,7 @@
         padding-bottom: .8em;
         &__box{
             max-width: none;
-            height: 21.5em;
-            margin: 0 10em;
+            margin: 0 auto;
             margin-bottom: 3.1em;
             &--increase{
                 background-color: transparent;
@@ -105,13 +97,10 @@
                     justify-content: flex-end;
                 }
                 &__image{
-                    top: auto;
                     left: auto;
                     transform: none;
                     &--laptop{
-                        display: none;
-                        display: block;
-                        bottom: -13.5em;
+                        top: 10em;
                         right: 5em;
                         width: 30%;
                         max-width: 23em;
